--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,15 @@
-lib-cov
+# Numerous always-ignore extensions
+*.diff
+*.err
+*.orig
+*.log
+*.rej
+*.swo
+*.swp
+*.zip
+*.vi
+*~
+*.sass-cache
 *.seed
 *.log
 *.csv
@@ -7,6 +18,31 @@ lib-cov
 *.pid
 *.gz
 
+# OS or Editor folders
+.DS_Store
+._*
+Thumbs.db
+.cache
+.project
+.settings
+.tmproj
+*.esproj
+nbproject
+*.sublime-project
+*.sublime-workspace
+
+# Komodo
+*.komodoproject
+.komodotools
+
+# Folders to ignore
+.hg
+.svn
+.CVS
+.idea
+node_modules
+dist
+lib-cov
 pids
 logs
 results
